--- a/src/Web/components/header/Header.module.css
+++ b/src/Web/components/header/Header.module.css
@@ -35,5 +35,7 @@
 }
 
 .header {
-  padding: 1.5rem 3rem;
+  padding: 2rem 3rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid var(--tertiary-color);
 }
