--- a/src/Web/styles/globals.css
+++ b/src/Web/styles/globals.css
@@ -9,6 +9,10 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
+  --primary-color: #E1D7C6;
+  --secondary-color: #579BB1
+  --tertiary-color: #ECE8DD
+  
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
     #16abff33 0deg,
