--- a/src/Web/components/Footer/Footer.module.css
+++ b/src/Web/components/Footer/Footer.module.css
@@ -2,13 +2,14 @@
   padding: 3rem;
   border-top: 1px solid #eaeaea;
   display: grid;
-  grid-template-columns: repeat(10, auto);
+  grid-template-columns: 250px 1fr 1fr;
+  margin: 0 auto;
 }
 
 .footerLinks {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 180px);
   grid-auto-flow: column;
 }
 
