--- a/src/Web/styles/globals.css
+++ b/src/Web/styles/globals.css
@@ -9,10 +9,10 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 
-  --primary-color: #E1D7C6;
-  --secondary-color: #579BB1
-  --tertiary-color: #ECE8DD
-  
+  --primary-color: #e1d7c6;
+  --secondary-color: #579bb1;
+  --tertiary-color: #ece8dd;
+
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
     #16abff33 0deg,
