--- a/src/Web/components/ColumnText/ColumnText.module.css
+++ b/src/Web/components/ColumnText/ColumnText.module.css
@@ -3,7 +3,7 @@
   justify-content: space-evenly;
   padding: 3rem 0;
   font-style: italic;
-  background: var(--primary-color);
+  background: var(--tertiary-color);
 }
 
 .columnCard {
