--- a/src/Web/components/Footer/Footer.module.css
+++ b/src/Web/components/Footer/Footer.module.css
@@ -4,6 +4,8 @@
   display: grid;
   grid-template-columns: 250px 1fr 1fr;
   margin: 0 auto;
+  background: var(--primary-color);
+  border-top: 1px solid var(--tertiary-color);
 }
 
 .footerLinks {
