--- a/src/Web/components/header/Header.module.css
+++ b/src/Web/components/header/Header.module.css
@@ -34,6 +34,17 @@
   align-items: center;
 }
 
+.rightNav button {
+  background: transparent;
+  margin-inline-start: 1rem;
+  border-color: transparent;
+  cursor: pointer;
+}
+
+.rightNav button img {
+  height: 100%;
+}
+
 .header {
   padding: 2rem 3rem;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
