perf: improve sign up and login forms
Add autocomplete and improve accessiblity

--- a/src/Web/components/RegisterForm/RegisterForm.module.css
+++ b/src/Web/components/RegisterForm/RegisterForm.module.css
@@ -6,8 +6,13 @@
 }
 
 .form * {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   padding: 1rem;
+}
+
+.errorMessage {
+  color: red;
+  margin-bottom: 1rem;
 }
 
 .submitBtn {
