--- a/src/Web/components/header/Header.module.css
+++ b/src/Web/components/header/Header.module.css
@@ -50,3 +50,60 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid var(--tertiary-color);
 }
+
+.button {
+  font-size: 0;
+}
+
+.mobileMenu {
+  padding: 1rem 2rem;
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100%;
+}
+
+.mobileMenu ul {
+  list-style: none;
+}
+
+.mobileMenu li {
+  font-size: 1.25rem;
+  margin-bottom: 1rem;
+}
+
+.enter {
+  /* max-height: 0; */
+  opacity: 0;
+}
+.enterActive {
+  /* max-height: 2000px; */
+  opacity: 1;
+  transition: all 200ms;
+}
+.exit {
+  /* max-height: 2000px; */
+  opacity: 1;
+}
+.exitActive {
+  /* max-height: 0; */
+  opacity: 0;
+  transition: all 200ms;
+}
+
+@media (min-width: 786px) {
+  .mobileMenuBtn {
+    display: none;
+  }
+}
+
+@media (max-width: 786px) {
+  .leftNav a:not(.logoLink),
+  .rightNav a {
+    display: none;
+  }
+
+  .header {
+    padding: 1rem 2rem;
+  }
+}
