--- a/src/Web/components/Footer/Footer.module.css
+++ b/src/Web/components/Footer/Footer.module.css
@@ -2,17 +2,20 @@
   padding: 3rem;
   border-top: 1px solid #eaeaea;
   display: grid;
-  grid-template-columns: 250px 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   margin: 0 auto;
+  gap: 2rem;
   background: var(--primary-color);
   border-top: 1px solid var(--tertiary-color);
 }
 
+.logo {
+  grid-column: span 2;
+}
+
 .footerLinks {
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 180px);
-  grid-auto-flow: column;
+  grid-template-columns: repeat(3, auto);
 }
 
 .footerLinks a {
@@ -23,4 +26,20 @@
 
 .footerLinks a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 1080px) {
+  .footerLinks {
+    grid-template-columns: repeat(2, auto);
+    gap: 1rem;
+    width: 100%;
+  }
+}
+
+@media (max-width: 786px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
